--- a/accounts/templates/accounts/order_form.html
+++ b/accounts/templates/accounts/order_form.html
@@ -2,11 +2,16 @@
 {% load static %}
 
 {% block content %}
-
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Create">
-    </form>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card card-body">
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" value="Create">
+                </form>
+            </div>
+        </div>
+    </div>
 
 {% endblock content %}
