--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -11,18 +11,22 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  {% if request.user.is_staff %}
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+      {% if request.user.is_staff %}
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'product' %}">Products</a>
         </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account' %}">Settings</a>
+          </li>
+        {% endif %}
       </ul>
     </div>
-  {% endif %}
   <span id="hello-msg">Hello, {{ request.user }}</span>
   <span><a href="{% url 'logout' %}">Logout</a></span>
 </nav>
