Password Reset Email

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -115,7 +115,11 @@
 					<div class="d-flex justify-content-center links">
 						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
 					</div>
-			
+				</div>
+				<div class="mt-4">
+					<div class="d-flex justify-content-center links">
+						Forget Password? <a href="{% url 'reset_password' %}" class="ml-2">Reset Password</a>
+					</div>
 				</div>
 			</div>
 		</div>
